user can now access his orders - only if member fixed many return statements in system market- returned null if user isn't logged in instead of throwing an exception fixed some errors in services - method returns Response, in mistake returned ResponseT